--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="css/header.css"/>
+		<link rel="stylesheet" type="text/css" href="lib/font/iconfont.css">
 	</head>
 	<body>
+		<div class="header"></div>
+		<div class="main1">
+			<ul>
+				<li>asdfa</li>
+			</ul>
+		</div>
+		<div class="footer"></div>
+		
+		<script src="lib/requirejs/require.js" data-main="/js/index"></script>
+		
+		
 	</body>
 </html>
