首页头尾部

--- a/index.html
+++ b/index.html
@@ -4,18 +4,32 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<link rel="stylesheet" type="text/css" href="css/header.css"/>
+		<link rel="stylesheet" type="text/css" href="css/footer.css"/>
 		<link rel="stylesheet" type="text/css" href="lib/font/iconfont.css">
+		<link rel="stylesheet" type="text/css" href="css/index.css"/>
+		<!--<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css"/>-->
 	</head>
 	<body>
 		<div class="header"></div>
-		<div class="main1">
-			<ul>
-				<li>asdfa</li>
-			</ul>
+		<div class="main">
+			<div class="up">
+				<img src="images/151201897213.jpg"/>
+			</div>
+			<div class="down">
+				<div class="scale"><a href="#"><img src="images/150788670955.jpg"/><h3>努比亚Z17S无边框全面屏 未来全面而来</h3></a></div>
+				<div class="scale"><a href="#"><img src="images/149672763226.jpg"/><h3>nubia UI 5.0  更智慧 更好用</h3></a></div>
+				<div class="scale"><a href="#"><img src="images/149752092562.jpg"/><h3>努比亚摄影长廊</h3></a></div>
+			</div>
 		</div>
+		
 		<div class="footer"></div>
 		
 		<script src="lib/requirejs/require.js" data-main="/js/index"></script>
+		<script src="lib/jquery/jquery-1.12.4.min.js"></script>
+		<script type="text/javascript">
+			
+			
+		</script>
 		
 		
 	</body>
