--- a/html/list.html
+++ b/html/list.html
@@ -3,7 +3,60 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="/css/header.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/footer.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/list.css"/>
+		<link rel="stylesheet" type="text/css" href="/lib/font/iconfont.css">
+		
 	</head>
 	<body>
+		<div class="header"></div>
+		
+		<div class="carousel_nav">
+			<div class="nav">
+				<ul>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+			</div>
+			<div class="carousel"></div>
+		</div>
+		<div class="mall">
+			<div class="change_left"></div>
+			<div class="change_right"></div>
+		</div>
+		<div class="hotproducts">
+			<h1>热门产品</h1>
+			<div class="mall_box"></div>
+		</div>
+		<div class="competitive">
+			<h1>精品手机</h1>
+			<div class="up"></div>
+			<div class="down"></div>
+		</div>
+		<div class="compet_fit">
+			
+		</div>
+		<div class="hotcomment">
+			<h1>产品热评</h1>
+		</div>
+		<div class="video">
+			<h1>视频</h1>
+		</div>
+		<div class="server">
+			<h1>服务</h1>
+		</div>
+		
+		<div class="footer"></div>
+		<script src="/lib/requirejs/require.js" data-main="/js/list"></script>
+		<script type="text/javascript">
+			
+		</script>
 	</body>
 </html>
