--- a/html/login.html
+++ b/html/login.html
@@ -3,22 +3,67 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="/css/resetStyle.css"/>
 		<link rel="stylesheet" type="text/css" href="/css/login.css"/>
+		<link rel="stylesheet" type="text/css" href="/lib/font/iconfont.css"/>
 	</head>
 	<body>
 		<div class="container">
 			<div class="logo"></div>
 			<form>
-				<div class="navTab"></div>
-				<div class="navCon"></div>
+				<div class="navTab">
+					<span id="account_login">努比亚账号登录</span>
+					<span>|</span>
+					<span id="phone_login">手机验证码登录</span>
+				</div>
+				<div class="navCon">
+					<div class="reg_id">
+						<div class="username">
+							<input type="text" id="in_username" placeholder="邮箱/手机号码/用户名"/>
+							<span>请输入信息</span>
+						</div>
+						<div class="password">
+							<input type="password" id="in_password" placeholder="密码为6-16个字符（数字、字母、符号至少包括两种）" />
+							<span>请输入密码</span>
+						</div>
+					</div>
+					<div class="reg_phone">
+						<div class="phone_number">
+							<input type="text" id="" placeholder="手机号码" />
+							<span>请输入手机号</span>
+						</div>
+						<div class="valicode">
+							<input type="text" id="" placeholder="请输入验证码（不区分大小写）" />
+							<span class="getcode"></span>
+							<span>请输入验证码</span>
+						</div>
+						<div class="phone_valicode">
+							<input type="text" placeholder="请输入手机验证码"/>
+							<button>获取验证码</button>
+							<span>请输入手机验证码</span>
+						</div>
+					</div>
+				</div>
 				<input type="button" id="login_btn" value="立即登录" />
 				<div class="forget">
-					<a href="#">注册新账号</a>
+					<a href="/html/register.html">注册新账号</a>
 					<span>|</span>
-					<a href="#">忘记密码</a>
+					<a href="#">忘记密码?</a>
 				</div>
-				<div class="thirdlogin"></div>
+				<div class="thirdlogin">其他登录方式：
+					<a href="#"><i class="iconfont icon-weixin"></i></a>
+					<a href="#"><i class="iconfont icon-zhifubao"></i></a>
+					<a href="#"><i class="iconfont icon-weibo"></i></a>
+					<a href="#"><i class="iconfont icon-qq1"></i></a>
+				</div>
 			</form>	
 		</div>
+		
+		<div class="footer">
+			<p>2012-2017 努比亚 版权所有 粤ICP备10006213号-2 ICP经营许可证编号：
+				粤B2-20120688深圳市市场监督管理局企业主体身份公示 
+				<img src="/images/57c5599015f1558.png"/>努比亚技术有限公司</p>
+		</div>
+		<script src="/lib/requirejs/require.js" data-main="/js/login"></script>
 	</body>
 </html>
