--- a/html/register.html
+++ b/html/register.html
@@ -3,7 +3,82 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="/css/resetStyle.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/register.css"/>
+		
 	</head>
 	<body>
+		<div class="container">
+			<div class="logo"></div>
+			<form>
+				<!--切换-->
+				<div class="navTab">
+					<span id="phone_register">用手机号码注册账号</span>
+					<span>|</span>
+					<span id="email_regiseter">用电子邮箱注册账号</span>
+				</div>
+				<!--手机注册-->
+				<div class="phone_register">
+					<div>
+						<input type="text" id="" placeholder="请输入手机号码" />
+						<span>请填写信息</span>
+					</div>
+					<div>
+						<input type="password" id="" placeholder="密码为6-16个字符（数字、字母、符号至少包括两种）" />
+						<span>请填写信息</span>
+					</div>
+					<div>
+						<input type="text" id="" placeholder="请输入验证码（不区分大小写）" />
+						<span class="getcode"></span>
+						<span>验证码不能为空</span>
+					</div>
+					<div>
+						<input type="text" id="" placeholder="请输入手机收到的验证码" />
+						<button>获取验证码</button>
+						<span>手机验证码不能为空</span>
+					</div>
+				</div>
+				<!--邮箱注册-->
+				<div class="email_register">
+					<div>
+						<input type="text" id="" placeholder="请输入常用邮箱地址" />
+						<span>请填写信息</span>
+					</div>
+					<div>
+						<input type="password" id="" placeholder="密码为6-16个字符（数字、字母、符号至少包括两种）" />
+						<span>请填写信息</span>
+					</div>
+					<div>
+						<input type="text" id="" placeholder="请输入验证码（不区分大小写）" />
+						<span class="getcode"></span>
+						<span>验证码不能为空</span>
+					</div>
+					<div>
+						<input type="text" id="" placeholder="请输入邮箱收到的验证码" />
+						<button>获取验证码</button>
+						<span>邮箱验证码不能为空</span>
+					</div>
+				</div>
+				<!--表单尾部提交-->
+				<div class="registfooter">
+					<div class="safe">
+						<input type="checkbox" checked="checked" id=""/>
+						我已阅读并接受<a href="#">用户协议</a>和<a href="#">隐私政策</a>
+					</div>
+					<div class="submit">
+						<input type="button" value="提交" id="register_btn"/>
+					</div>
+					<p>已有账号，<a href="/html/login.html">直接登录</a></p>
+				</div>
+			</form>
+		</div>
+		
+		<div class="footer">
+			<p>2012-2017 努比亚 版权所有 粤ICP备10006213号-2 ICP经营许可证编号：
+				粤B2-20120688深圳市市场监督管理局企业主体身份公示 
+				<img src="/images/57c5599015f1558.png"/>努比亚技术有限公司</p>
+		</div>
+		
+		<script src="/lib/requirejs/require.js" data-main="/js/register"></script>
 	</body>
 </html>
