--- a/html/list.html
+++ b/html/list.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/footer.css"/>
 		<link rel="stylesheet" type="text/css" href="/css/list.css"/>
 		<link rel="stylesheet" type="text/css" href="/lib/font/iconfont.css">
+		<link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap.min.css"/>
 		
 	</head>
 	<body>
@@ -15,17 +16,49 @@
 		<div class="carousel_nav">
 			<div class="nav">
 				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li>Z17S</li>
+					<li>Z17miniS</li>
+					<li>Z17</li>
+					<li>Z17mini</li>
+					<li>Z11</li>
+					<li>M&N系列</li>
+					<li>周边配件</li>
+					<li>专属配件</li>
 				</ul>
 			</div>
-			<div class="carousel"></div>
+			<div class="carousel_my">
+				<div id="myCarousel" class="carousel slide">
+				    <!-- 轮播（Carousel）指标 -->
+				    <ol class="carousel-indicators">
+				        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+				        <li data-target="#myCarousel" data-slide-to="1"></li>
+				        <li data-target="#myCarousel" data-slide-to="2"></li>
+				        <li data-target="#myCarousel" data-slide-to="3"></li>
+				    </ol>   
+				    <!-- 轮播（Carousel）项目 -->
+				    <div class="carousel-inner">
+				        <div class="item active">
+				            <a href="#"><img src="/images/151212499432.jpg" alt="First slide"></a>
+				        </div>
+				        <div class="item">
+				            <a href="#"><img src="/images/151201897213.jpg" alt="Second slide"></a>
+				        </div>
+				        <div class="item">
+				            <a href="#"><img src="/images/150958951828.jpg" alt="Third slide"></a>
+				        </div>
+				        <div class="item">
+				            <a href="#"><img src="/images/150959275480.jpg" alt="fourth slide"></a>
+				        </div>
+				    </div>
+				    <!-- 轮播（Carousel）导航 -->
+				    <a class="carousel-control left" href="#myCarousel" 
+				        data-slide="prev">&lsaquo;
+				    </a>
+				    <a class="carousel-control right" href="#myCarousel" 
+				        data-slide="next">&rsaquo;
+				    </a>
+				</div>
+			</div>
 		</div>
 		<div class="mall">
 			<div class="change_left"></div>
