--- a/index.html
+++ b/index.html
@@ -25,21 +25,7 @@
 				    </ol>   
 				    <!-- 轮播（Carousel）项目 -->
 				    <div class="carousel-inner">
-				        <div class="item active">
-				            <a href="#"><img src="images/151201897213.jpg" alt="First slide"></a>
-				        </div>
-				        <div class="item">
-				            <a href="#"><img src="images/150958900638.jpg" alt="Second slide"></a>
-				        </div>
-				        <div class="item">
-				            <a href="#"><img src="images/150959275480.jpg" alt="Third slide"></a>
-				        </div>
-				        <div class="item">
-				            <a href="#"><img src="images/150958951828.jpg" alt="fourth slide"></a>
-				        </div>
-				        <div class="item">
-				            <a href="#"><img src="images/150811561722.jpg" alt="fifth slide"></a>
-				        </div>
+				        
 				    </div>
 				    <!-- 轮播（Carousel）导航 -->
 				    <a class="carousel-control left" href="#myCarousel" 
@@ -63,9 +49,26 @@
 		<!--<script src="lib/jquery/jquery-1.12.4.min.js"></script>
 		<script src="lib/bootstrap/js/bootstrap.min.js"></script>-->
 		<script src="lib/requirejs/require.js" data-main="/js/index"></script>
-		<script type="text/javascript">
+		<script type="text/html" id="carousel_template">
 			
-			
+			{{each floors as product}}
+				<div class="item active">
+				    <a href="#"><img src="{{product.products[0].img}}" alt="First slide"></a>
+				</div>
+				<div class="item">
+				    <a href="#"><img src="{{product.products[1].img}}" alt="Second slide"></a>
+				</div>
+				<div class="item">
+				    <a href="#"><img src="{{product.products[2].img}}" alt="Third slide"></a>
+				</div>
+				<div class="item">
+					<a href="#"><img src="{{product.products[3].img}}" alt="fourth slide"></a>
+				</div>
+				<div class="item">
+				    <a href="#"><img src="{{product.products[4].img}}" alt="fifth slide"></a>
+				</div>
+			{{/each}}
+
 		</script>
 	</body>
 </html>
