--- a/html/list.html
+++ b/html/list.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="/css/header.css"/>
-		<link rel="stylesheet" type="text/css" href="/css/footer.css"/>
-		<link rel="stylesheet" type="text/css" href="/css/list.css"/>
-		<link rel="stylesheet" type="text/css" href="/lib/font/iconfont.css">
-		<link rel="stylesheet" type="text/css" href="/lib/bootstrap/css/bootstrap.min.css"/>
+		<link rel="stylesheet" type="text/css" href="/mynubia/css/header.css"/>
+		<link rel="stylesheet" type="text/css" href="/mynubia/css/footer.css"/>
+		<link rel="stylesheet" type="text/css" href="/mynubia/css/list.css"/>
+		<link rel="stylesheet" type="text/css" href="/mynubia/lib/font/iconfont.css">
+		<link rel="stylesheet" type="text/css" href="/mynubia/lib/bootstrap/css/bootstrap.min.css"/>
 		
 	</head>
 	<body>
@@ -38,16 +38,16 @@
 				    <!-- 轮播（Carousel）项目 -->
 				    <div class="carousel-inner">
 				        <div class="item active">
-				            <a href="#"><img src="/images/151212499432.jpg" alt="First slide"></a>
+				            <a href="#"><img src="/mynubia/images/151212499432.jpg" alt="First slide"></a>
 				        </div>
 				        <div class="item">
-				            <a href="#"><img src="/images/151201897213.jpg" alt="Second slide"></a>
+				            <a href="#"><img src="/mynubia/images/151201897213.jpg" alt="Second slide"></a>
 				        </div>
 				        <div class="item">
-				            <a href="#"><img src="/images/150958951828.jpg" alt="Third slide"></a>
+				            <a href="#"><img src="/mynubia/images/150958951828.jpg" alt="Third slide"></a>
 				        </div>
 				        <div class="item">
-				            <a href="#"><img src="/images/150959275480.jpg" alt="fourth slide"></a>
+				            <a href="#"><img src="/mynubia/images/150959275480.jpg" alt="fourth slide"></a>
 				        </div>
 				    </div>
 				    <!-- 轮播（Carousel）导航 -->
@@ -105,9 +105,9 @@
 				</ul>
 			</div>
 			<div class="change_right">
-				<div><a href="#"><img src="/images/change_right1.jpg"/></a></div>
-				<div><a href="#"><img src="/images/change_right1.jpg"/></a></div>
-				<div><a href="#"><img src="/images/change_right1.jpg"/></a></div>
+				<div><a href="#"><img src="/mynubia/images/change_right1.jpg"/></a></div>
+				<div><a href="#"><img src="/mynubia/images/change_right1.jpg"/></a></div>
+				<div><a href="#"><img src="/mynubia/images/change_right1.jpg"/></a></div>
 			</div>
 		</div>
 		<div class="main">
@@ -116,7 +116,7 @@
 		
 		
 		<div class="footer"></div>
-		<script src="/lib/requirejs/require.js" data-main="/js/list"></script>
+		<script src="/mynubia/lib/requirejs/require.js" data-main="/mynubia/js/list"></script>
 		<script type="text/html" id="floor_template">
 			{{each floors as floor}}
 				
