--- a/html/list.html
+++ b/html/list.html
@@ -145,7 +145,7 @@
 								</div>
 								<div class="hotfoot">
 									<a href="#">查看详情</a>
-									<a href="#">立即购买</a>
+									<a href="/mynubia/html/detail.html">立即购买</a>
 								</div>
 							</li>
 							{{/each}}
