--- a/html/register.html
+++ b/html/register.html
@@ -41,28 +41,28 @@
 				<!--邮箱注册-->
 				<div class="email_register">
 					<div>
-						<input type="text" id="" placeholder="请输入常用邮箱地址" />
-						<span>请填写信息</span>
+						<input type="text" id="username1" placeholder="请输入常用邮箱地址" />
+						<span id="usernametip1"></span>
 					</div>
 					<div>
-						<input type="password" id="" placeholder="密码为6-16个字符（数字、字母、符号至少包括两种）" />
-						<span>请填写信息</span>
+						<input type="password" id="password1" placeholder="密码为6-16个字符（数字、字母、符号至少包括两种）" />
+						<span id="passwordtip1"></span>
 					</div>
 					<div>
-						<input type="text" id="" placeholder="请输入验证码（不区分大小写）" />
-						<span class="getcode"></span>
-						<span>验证码不能为空</span>
+						<input type="text" id="valicode1" placeholder="请输入验证码（不区分大小写）" />
+						<span class="getcode1"><img src=""/></span>
+						<span id="checkcode1"></span>
 					</div>
 					<div>
 						<input type="text" id="" placeholder="请输入邮箱收到的验证码" />
 						<button>获取验证码</button>
-						<span>邮箱验证码不能为空</span>
+						<span></span>
 					</div>
 				</div>
 				<!--表单尾部提交-->
 				<div class="registfooter">
 					<div class="safe">
-						<input type="checkbox" checked="checked" id=""/>
+						<input type="checkbox" checked="checked" id="checkan"/>
 						我已阅读并接受<a href="#">用户协议</a>和<a href="#">隐私政策</a>
 					</div>
 					<div class="submit">
