--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title></title>		
-		<link rel="stylesheet" type="text/css" href="css/header.css"/>
-		<link rel="stylesheet" type="text/css" href="css/footer.css"/>
-		<link rel="stylesheet" type="text/css" href="lib/font/iconfont.css">
-		<link rel="stylesheet" type="text/css" href="css/index.css"/>
-		<link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.min.css"/>
+		<link rel="stylesheet" type="text/css" href="/mynubia/css/header.css"/>
+		<link rel="stylesheet" type="text/css" href="/mynubia/css/footer.css"/>
+		<link rel="stylesheet" type="text/css" href="/mynubia/lib/font/iconfont.css">
+		<link rel="stylesheet" type="text/css" href="/mynubia/css/index.css"/>
+		<link rel="stylesheet" type="text/css" href="/mynubia/lib/bootstrap/css/bootstrap.min.css"/>
 	</head>
 	<body>
 		<div class="header"></div>
@@ -48,7 +48,7 @@
 		
 		<!--<script src="lib/jquery/jquery-1.12.4.min.js"></script>
 		<script src="lib/bootstrap/js/bootstrap.min.js"></script>-->
-		<script src="lib/requirejs/require.js" data-main="/js/index"></script>
+		<script src="/mynubia/lib/requirejs/require.js" data-main="/mynubia/js/index"></script>
 		<script type="text/html" id="carousel_template">
 			
 			{{each floors as product}}
