--- a/html/cart.html
+++ b/html/cart.html
@@ -3,7 +3,26 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="/mynubia/css/header.css"/>
+		<link rel="stylesheet" type="text/css" href="/mynubia/css/footer.css"/>
+		<link rel="stylesheet" type="text/css" href="/mynubia/lib/font/iconfont.css">
+		
 	</head>
 	<body>
+		<div class="header"></div>
+		
+		<div class="main">
+			
+			
+			
+			
+			
+		</div>
+		
+		<div class="footer"></div>
+		
+		
+		
+		<script src="/mynubia/lib/requirejs/require.js" data-main="/mynubia/js/cart" ></script>
 	</body>
 </html>
